testdata/zkc/invalid/basic_invalid_07.zkc
;;error:4:3-9:unexpected token
function f(x:u8) -> (r:u8) {
  r = x +
  return
}
